# OZYSDLC

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/ozy/: __init__.py  cli.py  reporters.py  run.py  scanners.py
