[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ozy-sdlc"
version = "0.1.0"
description = "Secure SDLC Pipeline - CLI for security scanning"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "OzySDLC Team", email = "team@ozysdlc.dev" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
ozy = "ozy.cli:main"

[project.urls]
Homepage = "https://github.com/SamBleed/OZYSDLC"
Repository = "https://github.com/SamBleed/OZYSDLC"
Issues = "https://github.com/SamBleed/OZYSDLC/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ozy"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
